fix aligncenter display in editor

--- a/wp-content/themes/lax/editor.css
+++ b/wp-content/themes/lax/editor.css
@@ -33,10 +33,10 @@ than the CSS added by WP as that gets added right before the
 /* first selector is for the title, the 2nd for the content */
 .editor-styles-wrapper.editor-styles-wrapper
 	.edit-post-visual-editor__post-title-wrapper
-	> :where(:not(.alignleft):not(.alignright):not(.alignfull)),
+	> :where(:not(.alignleft):not(.alignright):not(.aligncenter):not(.alignfull)),
 .editor-styles-wrapper.editor-styles-wrapper
 	.block-editor-block-list__layout.is-root-container
-	> :where(:not(.alignleft):not(.alignright):not(.alignfull)) {
+	> :where(:not(.alignleft):not(.alignright):not(.aligncenter):not(.alignfull)) {
 	margin-left: 0 !important;
 	margin-right: 0 !important;
 }
